<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Multic</string>
    <string name="shared_pref_name">prefs</string>
    <string name="pref_name_difficulty">difficulty-pref</string>
    <string name="pref_name_random_start">random-start-pos-pref</string>
    <string name="pref_name_who_starts">who-starts-pref</string>

    <string name="mul_sign">X</string>
    <string name="message_default"></string>
    
    <string name="msg_text_size">Large Text</string>
    
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="action_help">Instructions</string>
    <string name="title_activity_help">Instructions</string>
    
    <string name="level_radio_group_label">Difficulty</string>
    <string name="level_silly">Silly</string>
    <string name="level_easy">Easy</string>
    <string name="level_medium">Medium</string>
    <string name="level_hard">Hard</string>
    <string name="level_expert">Expert</string>
    <string name="level_insane">Insane</string>
    
    <string name="who_starts_label">Who Starts</string>
    <string name="you_start">You</string>
    <string name="computer_starts">Computer</string>
    
    <string name="string_pos_setting_label">Start Position</string>
    <string name="start_pos_fixed">Both wheels at 1</string>
    <string name="start_pos_random">Random</string>
    
    
</resources>